@@ -39,7 +39,7 @@
 
 #ifndef lint
 #ifdef	DOSCCS
-static char sccsid[] = "@(#)version.c	2.397 (gritter) 3/13/09";
+static char sccsid[] = "@(#)version.c	2.398 (gritter) 5/26/09";
 #endif
 #endif /* not lint */
 
@@ -48,7 +48,7 @@ static char sccsid[] = "@(#)version.c	2.397 (gritter) 3/13/09";
  * Load this file first to get a "total" Mail version.
  */
 /*char	*version = "8.1 6/6/93";*/
-const char *version = V " 3/13/09";
+const char *version = V " 5/26/09";
 #ifndef	lint
 #if __GNUC__ >= 3 && __GNUC_MINOR__ >= 4 || __GNUC__ >= 4
 #define USED    __attribute__ ((used))
@@ -57,7 +57,7 @@ const char *version = V " 3/13/09";
 #else
 #define USED
 #endif
-static const char *versionid USED = "@(#)mailx " V " (gritter) 3/13/09";
+static const char *versionid USED = "@(#)mailx " V " (gritter) 5/26/09";
 #endif	/* !lint */
 /* SLIST */
 /*
@@ -94,7 +94,7 @@ md5.h:	Sccsid @(#)md5.h	1.8 (gritter) 3/4/06
 mime.c:static char sccsid[]  = "@(#)mime.c	2.70 (gritter) 3/10/09";
 names.c:static char sccsid[] = "@(#)names.c	2.22 (gritter) 3/4/06";
 nss.c:static char sccsid[] = "@(#)nss.c	1.48 (gritter) 8/4/07";
-openssl.c:static char sccsid[] = "@(#)openssl.c	1.25 (gritter) 8/4/07";
+openssl.c:static char sccsid[] = "@(#)openssl.c	1.26 (gritter) 5/26/09";
 pop3.c:static char sccsid[] = "@(#)pop3.c	2.43 (gritter) 3/4/06";
 popen.c:static char sccsid[] = "@(#)popen.c	2.20 (gritter) 3/4/06";
 quit.c:static char sccsid[] = "@(#)quit.c	2.30 (gritter) 11/11/08";
